--- a/Hospital/src/app/core/login/login.component.html
+++ b/Hospital/src/app/core/login/login.component.html
@@ -7,8 +7,18 @@
             <form fxLayout="column" [formGroup]="grupo">
                 <mat-form-field appearance="legacy">
                     <input type="text" placeholder="Correo" formControlName="correo" name="correo" matInput required>
-                    <mat-error *ngIf="grupo.get(correo).hasError('required')">El correo es necesario</mat-error>
+                    <mat-error *ngIf="grupo.get('correo').hasError('required')">El correo es necesario</mat-error>
+                    <mat-error *ngIf="grupo.get('correo').hasError('email')">Colocar formato de email</mat-error>
                 </mat-form-field>
+                <br>
+                <mat-form-field appearance="legacy">
+                    <input type="password" placeholder="Contraseña" formControlName="pass" name="contrasena" matInput required>
+                    <mat-error *ngIf="grupo.get('pass').hasError('required')">La contraseña es necesaria</mat-error>
+                </mat-form-field>
+                <br>
+                <article>
+                <button mat-raised-button color="primary" [disabled]="grupo.invalid" (click)="login()">Ingresar</button>
+                </article>
             </form>
         </mat-card-content>
     </mat-card>
