--- a/Hospital/src/app/core/login/login.component.html
+++ b/Hospital/src/app/core/login/login.component.html
@@ -1,8 +1,8 @@
 <div fxLayout fxLayoutAlign="center center">
     <mat-card fxFlex="500px" fxFlex.xs="320px" class="mat-elevation-z10">
         <mat-card-header>
-            <h3>Login</h3>
-        </mat-card-header>
+    <mat-card-title>Login</mat-card-title>
+    </mat-card-header>
         <mat-card-content>
             <form fxLayout="column" [formGroup]="grupo">
                 <mat-form-field appearance="legacy">
