--- a/Hospital/src/app/core/registro/registro.component.html
+++ b/Hospital/src/app/core/registro/registro.component.html
@@ -1,1 +1,11 @@
-<p>registro works!</p>
+<div fxLayout fxLayoutAlign="center center">
+  <mat-card fxFlex="500px" fxFlex.xs="320px" class="mat-elevation-z10">
+    <mat-card-header>
+    <mat-card-title>Registro</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+
+    </mat-card-content>
+  </mat-card>
+
+</div>
