--- a/Hospital/src/app/medicos/edicion/edicion.component.html
+++ b/Hospital/src/app/medicos/edicion/edicion.component.html
@@ -1,1 +1,38 @@
-<p>edicion works!</p>
+  <div fxLayout fxLayoutAlign="center center">
+    <mat-card fxFlex="500px" fxFlex.xs="320px" class="mat-elevation-z10">
+      <mat-card-header>
+      <mat-card-title>Edicion</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <form fxLayout="column" [formGroup]="grupo">
+          <mat-form-field appearance="standard" style="display:none;">
+            <input type="text"  placeholder="Id" formControlName="_id" name="id" matInput required >
+          </mat-form-field>
+          <mat-form-field appearance="standard">
+            <input type="text" placeholder="Ingresar nombre" formControlName="nombre" name="name" matInput required >
+            <mat-error *ngIf="grupo.get('nombre').hasError('required')">El nombre es necesario</mat-error>
+          </mat-form-field>
+          <mat-form-field appearance="standard">
+            <input type="text" placeholder="Ingresar apellido" formControlName="apellido" name="lastname" matInput required >
+            <mat-error *ngIf="grupo.get('apellido').hasError('required')">El apellido es necesario</mat-error>
+          </mat-form-field>
+          <mat-form-field appearance="standard">
+            <input type="text" placeholder="Ingresar especialidad" formControlName="especialidad" name="speciality" matInput required >
+            <mat-error *ngIf="grupo.get('especialidad').hasError('required')">La especialidad es necesaria</mat-error>
+          </mat-form-field>
+          <mat-form-field appearance="standard">
+            <input type="text" placeholder="Ingresar años de experiencia" formControlName="experiencia" name="experience" matInput required >
+            <mat-error *ngIf="grupo.get('experiencia').hasError('required')">Los años de experiencia son necesarios </mat-error>
+          </mat-form-field>
+          
+          <br>
+          <article>
+            <button (click)="editar()" mat-raised-button color="primary" [disabled]="grupo.invalid">Editar</button>
+          </article>
+          
+        </form>
+      </mat-card-content>
+    </mat-card>
+  
+  </div>
+  
