edicion y eliminar de medicos

--- a/Hospital/src/app/medicos/edicion/edicion.component.html
+++ b/Hospital/src/app/medicos/edicion/edicion.component.html
@@ -27,7 +27,8 @@
           
           <br>
           <article>
-            <button (click)="editar()" mat-raised-button color="primary" [disabled]="grupo.invalid">Editar</button>
+            <button (click)="editar()" mat-raised-button color="primary" [disabled]="grupo.invalid">Guardar</button>
+            <button (click)="cancelar()" mat-raised-button color="warn" >Cancelar</button>
           </article>
           
         </form>
