--- a/Hospital/src/app/atenciones/edicion/edicion.component.html
+++ b/Hospital/src/app/atenciones/edicion/edicion.component.html
@@ -12,17 +12,34 @@
             <input type="text" placeholder="Ingresar nombre del paciente" formControlName="paciente" name="paciente" matInput required >
             <mat-error *ngIf="grupo.get('paciente').hasError('required')">El nombre del paciente es necesario</mat-error>
           </mat-form-field>
-          <mat-form-field>
+          <mat-form-field appearance="standard">
             <mat-label>Elegir medico</mat-label>
-            <mat-select matFormFieldControl="medico" name="medico" required >
-              <mat-option *ngFor="let item of listamedicos" [value]="item.value">{{item}}</mat-option>
+            <mat-select matFormFieldControl="medico" formControlName="medico" name="medico" [(ngModel)]="medicoElegido" required (selectionChange)="selectionChange(medicoElegido)">
+              <mat-option *ngFor="let item of listaMedicos" [value]="item">{{item}}</mat-option>
+              <mat-error *ngIf="grupo.get('medico').hasError('required')">El medico es necesario</mat-error>
             </mat-select>
           </mat-form-field>
+          <mat-form-field appearance="standard">
+            <mat-label>Especialidad</mat-label>
+            <input type="text" placeholder="Especialidad" [(ngModel)]="especialidad" formControlName="especialidad" name="especialidad" matInput required >
+          </mat-form-field>
           <mat-radio-group aria-label="Seleccionar opción" formControlName="seguro" name="seguro">
+            <mat-label>¿Cuenta con seguro?</mat-label>
             <mat-radio-button value="Si">Si</mat-radio-button>
             <mat-radio-button value="No">No</mat-radio-button>
           </mat-radio-group>
-          
+          <mat-form-field appearance="standard">
+            <mat-label>Ingresar tipo de atencion:</mat-label>
+            <input type="text" placeholder="Tipo de atencion" formControlName="tipo" name="tipo" matInput required >
+            <mat-error *ngIf="grupo.get('tipo').hasError('required')">El tipo de atencion es necesaria</mat-error>
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>Elegir fecha de atencion</mat-label>
+            <input matInput [matDatepicker]="picker" formControlName="fecha" name="fecha">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+            <mat-error *ngIf="grupo.get('fecha').hasError('required')">La fecha de atencion es necesaria</mat-error>
+          </mat-form-field>
           <br>
           <article>
             <button (click)="editar()" mat-raised-button color="primary" [disabled]="grupo.invalid">Guardar</button>
