--- a/Hospital/src/app/medicos/listado/listado.component.html
+++ b/Hospital/src/app/medicos/listado/listado.component.html
@@ -1,3 +1,8 @@
+
+<div>
+  <button mat-raised-button color="primary" (click)="Agregar()">Agregar Médico</button>
+</div>
+
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource">
   
