--- a/Hospital/src/app/atenciones/listado/listado.component.html
+++ b/Hospital/src/app/atenciones/listado/listado.component.html
@@ -39,7 +39,7 @@
       <!-- Symbol Column -->
       <ng-container matColumnDef="fecha">
         <th mat-header-cell *matHeaderCellDef> Fecha </th>
-        <td mat-cell *matCellDef="let atencion"> {{atencion.fecha}} </td>
+        <td mat-cell *matCellDef="let atencion"> {{atencion.fecha | date}} </td>
       </ng-container>
 
        <!-- Symbol Column -->
