--- a/Hospital/src/app/facturacion/listado/listado.component.html
+++ b/Hospital/src/app/facturacion/listado/listado.component.html
@@ -9,43 +9,43 @@
         <!-- Name Column -->
         <ng-container matColumnDef="_id">
             <th mat-header-cell *matHeaderCellDef> Nro-Factura</th>
-            <td mat-cell *matCellDef="let facturas">  </td>
+            <td mat-cell *matCellDef="let facturas"> {{facturas._id}} </td>
           </ng-container>
     
         <!-- Name Column -->
         <ng-container matColumnDef="paciente">
           <th mat-header-cell *matHeaderCellDef> Paciente </th>
-          <td mat-cell *matCellDef="let facturas">  </td>
+          <td mat-cell *matCellDef="let facturas"> {{facturas.paciente}} </td>
         </ng-container>
     
         <!-- Weight Column -->
         <ng-container matColumnDef="medico">
           <th mat-header-cell *matHeaderCellDef> Medico </th>
-          <td mat-cell *matCellDef="let facturas">  </td>
+          <td mat-cell *matCellDef="let facturas"> {{facturas.medico}} </td>
         </ng-container>
     
         <!-- Symbol Column -->
         <ng-container matColumnDef="costo">
           <th mat-header-cell *matHeaderCellDef> Costo </th>
-          <td mat-cell *matCellDef="let facturas">  </td>
+          <td mat-cell *matCellDef="let facturas"> {{facturas.costo}} </td>
         </ng-container>
   
         <!-- Symbol Column -->
         <ng-container matColumnDef="fecha">
           <th mat-header-cell *matHeaderCellDef> Fecha </th>
-          <td mat-cell *matCellDef="let facturas">  </td>
+          <td mat-cell *matCellDef="let facturas"> {{facturas.fecha | date}} </td>
         </ng-container>
   
          <!-- Symbol Column -->
          <ng-container matColumnDef="editar">
           <th mat-header-cell *matHeaderCellDef> Editar </th>
-          <td mat-cell *matCellDef="let medicos"> <button mat-raised-button color="accent" (click)="editarRegistro(medicos._id)">Editar</button> </td>
+          <td mat-cell *matCellDef="let facturas"> <button mat-raised-button color="accent" (click)="editarRegistro(facturas._id)">Editar</button> </td>
         </ng-container>
   
          <!-- Symbol Column -->
          <ng-container matColumnDef="eliminar">
           <th mat-header-cell *matHeaderCellDef> Eliminar </th>
-          <td mat-cell *matCellDef="let medicos"> <button mat-raised-button color="warn" (click)="eliminar(medicos._id)">Eliminar</button> </td>
+          <td mat-cell *matCellDef="let facturas"> <button mat-raised-button color="warn" (click)="eliminar(facturas._id)">Eliminar</button> </td>
         </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
