--- a/Hospital/src/app/facturacion/nuevo/nuevo.component.html
+++ b/Hospital/src/app/facturacion/nuevo/nuevo.component.html
@@ -25,11 +25,11 @@
                 <input matInput [matDatepicker]="picker" formControlName="fecha" name="fecha">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
-                <mat-error *ngIf="grupo.get('fecha').hasError('required')">La fecha de atencion es necesaria</mat-error>
+                <mat-error *ngIf="grupo.get('fecha').hasError('required')">La fecha de la factura es necesaria</mat-error>
               </mat-form-field>
           <br>
           <article>
-            <button (click)="agregar()" mat-raised-button color="primary" [disabled]="grupo.invalid">Crear Atencion</button>
+            <button (click)="agregar()" mat-raised-button color="primary" [disabled]="grupo.invalid">Facturar</button>
             <button (click)="cancelar()" mat-raised-button color="warn" >Cancelar</button>
           </article>
           
